# GitCraft

./: .gitignore  README.md  pyproject.toml
gitcraft/: cli.py  config.py  gui.py  registry.py  server.py
gitcraft/core/: blocks.py  index.py  objects.py  snapshot.py
gitcraft/transport/: http.py  sftp.py
