[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gitcraft"
version = "0.1.0"
description = "Git-like incremental sync for Minecraft worlds via SFTP"
requires-python = ">=3.10"
dependencies = [
    "asyncssh>=2.14",
    "click>=8.1",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
gitcraft = "gitcraft.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gitcraft*"]
