[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "minecraft-gitcraft"
version = "0.2.0"
description = "Git-like incremental sync for Minecraft worlds"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
ssh = ["asyncssh>=2.14"]

[project.scripts]
gitcraft = "gitcraft.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gitcraft*"]
